--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,27 @@ header{
     background-color: var(--secondary-color);
     padding: 1rem;
     display: flex;
-    justify-content:space-between;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+
+#title{
+    display:flex;
+    justify-content: flex-start;
+    margin-top: 34px;
+}
+
+#form{
+    position: relative;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 .search{
+    position: relative;
+    height: 40px;
     background-color: black;
     border: 1px solid rgb(46, 43, 43);
     border-radius: 25px;
@@ -32,6 +49,8 @@ header{
     font-size: 16px;
     color:darkgrey;
     font-family: inherit;
+    bottom: 50%;
+    top: 50%;
     
 }
 
@@ -153,6 +172,8 @@ main{
     /* Height & width depends on how you want to reveal the overlay (see JS below) */   
     height: 100%;
     width: 0;
+    display: flex;
+    flex-wrap: wrap;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -166,6 +187,9 @@ main{
   /* Position the content inside the overlay */
   .overlay-content {
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     top: 10%; /* 25% from the top */
     width: 100%; /* 100% width */
     text-align: center; /* Centered text/links */
